Bug 428133 - removeItem and removeFolder accept ids of the wrong type (r=mano, a=beltzner)